<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/send_menu"
        android:orderInCategory="100"
        android:title="@string/menu_send"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/preview_menu"
        android:orderInCategory="100"
        android:title="@string/menu_preview"
        app:showAsAction="always|withText"/>
</menu>